<resources>
    <string name="app_name">Wannaplay</string>


    <string name="preferencesTitle">PREFERENCES</string>
    <string name="messagesTitle">MESSAGES</string>
    <string name="profileTitle">MY PROFILE</string>
    <string name="MusicianTitle">MUSICIAN PROFILE</string>

    <!--- LOGIN SCREEN -->

    <string name="loginSloganTxt">Looking for a band to make some noise? Let Wannaplay help you!</string>
    <string name="loginLoginBtn">Sign in with Facebook</string>
    <string name="loginCopyrightImg">Copyright CRUDZERA Group</string>

    <!--- FIRST LOGIN SCREEN -->

    <string name="registerHello">Hello</string>
    <string name="registerMessage1">Welcome, your profile is almost ready!</string>
    <string name="registerMessage2">We just need some more information.</string>
    <string name="registerHabilities">Your musical skills are:</string>
    <string name="registerBirth">You were born in:</string>
    <string name="registerBirthPicker">Click to select your date of birth</string>
    <string name="registerBirthDescription">In Wannaplay you can filter musicians by age.</string>
    <string name="registerRequiredBirthMessage">Enter your date of birth!</string>
    <string name="registerRequiredAbilitieshMessage">Please select at least one ability to continue!</string>

    <!--- PERMISSION DIALOG -->

    <string name="dialogTitle">Permission needed</string>
    <string name="dialogGrant">Grant</string>
    <string name="dialogDeny">Deny</string>
    <string name="dialogMessage">Location is necessary to find musicians close to you and allow other musicians to find you.</string>
    <string name="permissionGranted">Permission granted!</string>
    <string name="permissionDenied">Permission denied!</string>

    <!--- MENU -->

    <string name="menu_home">Home</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>

    <!--- HOME SCREEN -->

    <string name="homeTitle">There are musicians in your area!</string>
    <string name="homeStageImg">Picture of an empty stage</string>
    <string name="homeFilterResultTxt1">No results were found!</string>
    <string name="homeFilterResultTxt2">Change your preferences.</string>
    <string name="homePreferencesBtn">Button to change your preferences</string>

    <!--- GRID SCREEN -->

    <string name="gridTitle">There are musicians in your area!</string>
    <string name="gridPhoto">Profile photo</string>
    <string name="gridInfo">Musician data</string>
    <string name="gridName">Musician name</string>
    <string name="gridPinIcon">Marking pin icon</string>
    <string name="gridDistance">Distance between you and the musician</string>
    <string name="gridDistanceUnit" translatable="false">km</string>
    <string name="gridDistanceUnitDescription">Kilometers</string>
    <string name="gridMoreIcon">See more icon</string>

    <!--- PREFERENCES SCREEN -->

    <string name="preferencesLookingForTxt">I\'m looking for:</string>
    <string name="preferencesDistanceLabelTxt">Distance:</string>
    <string name="preferencesAgeLabelTxt">Age:</string>
    <string name="preferencesNewMembersTxt">New musicians in your area</string>
    <string name="preferencesNewMessagesTxt">New messages</string>
    <string name="preferencesAccountOptions">Account options:</string>
    <string name="preferencesLogoutBtnTxt">Logout</string>
    <string name="preferencesLogoutBtn">Button to logout</string>

    <!--- PROFILE SCREEN -->

    <string name="profileHeaderBackground">User profile header with a background image</string>
    <string name="profileHeaderTransparency">Blue color with transparency on top of the background image</string>
    <string name="profileHeaderPicture">Picture of the user</string>
    <string name="profileHeaderNameTxt">Name of the user</string>
    <string name="profileHabilitiesTxt">My musical skills:</string>
    <string name="profileSingerBtn">Singer hability toggle button</string>
    <string name="profileGuitarBtn">Guitar hability toggle button</string>
    <string name="profileBassBtn">Bass hability toggle button</string>
    <string name="profileDrumBtn">Drum hability toggle button</string>
    <string name="profileOtherBtn">Other habilities toggle button</string>
    <string name="profileAboutLabelTxt">About me:</string>
    <string name="profileAboutTxt">A short description about me...</string>
    <string name="profileLinkedAccountsLabelTxt">Linked Accounts:</string>
    <string name="profileSpotifyImg">Spotify Icon</string>
    <string name="profileSpotifyTxt" translatable="false">Spotify</string>
    <string name="profileSpotifySwitch">Turn on Spotify switch</string>
    <string name="profileMaxCharactersLabel">Max: 200</string>
    <string name="profileMaxCharacters">200 character maximum text</string>

    <!--- MESSAGES SCREEN -->
    <string name="messagesNoMessages">You have no messages!</string>
    <string name="messagesEmptyImg">An empty mailbox</string>

    <!--- CHAT SCREEN -->
    <string name="chatTypeMessage">Enter your message...</string>
    <string name="chatSendBtn">Send</string>

    <!--- MUSICIAN PROFILE SCREEN -->

    <string name="musicianHeaderBackground">Musician profile header with a background image</string>
    <string name="musicianHeaderTransparency">Blue color with transparency on top of the background image</string>
    <string name="musicianHeaderPicture">Picture of the musician</string>
    <string name="musicianHeaderNameTxt">Name of the musician</string>
    <string name="musicianAbilitiesTxt">Musical skills: </string>
    <string name="musicianMessageBtn">Send message</string>
    <string name="musicianAboutLabelTxt">About:</string>
    <string name="musicianAboutTxt">A short description about the musician</string>

    <!--- FACEBOOK ID's -->

    <string name="facebook_app_id" translatable="false">2205070229714402</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2205070229714402</string>
    <string name="notifications_preferences">Notifications:</string>
    <string name="profileDivider">Dividing line</string>

</resources>
