<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profileTitleTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/profileTitle"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#2F80ED"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- BACKGROUND PROFILE PIC -->

        <ImageView
            android:id="@+id/profileHeaderBackgroundImg"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/profileHeaderBackground"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTitleTxt"
            app:layout_constraintVertical_bias="1.0" />

        <!-- PROFILE PIC -->

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profilePhotoImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/profileHeaderPicture"
            android:elevation="4dp"
            android:src="@drawable/default_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profileHeaderBackgroundImg" />

        <!-- PROFILE NAME -->

        <TextView
            android:id="@+id/profileNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/profileHeaderNameTxt"
            android:fontFamily="sans-serif-light"
            android:shadowColor="#2d2d2d"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileHeaderBackgroundImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePhotoImg"
            tools:text="matheus" />

        <!-- HABILITIES -->

        <TextView
            android:id="@+id/musicianAbilitiesLblTxt"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profileHabilitiesTxt"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileHeaderBackgroundImg" />

        <!-- Microphone Checkbox -->
        <CheckBox
            android:id="@+id/profileVocalCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/singer_icon"
            android:contentDescription="@string/profileSingerBtn"
            app:layout_constraintEnd_toStartOf="@+id/profileGuitarCheckbox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/musicianAbilitiesLblTxt" />

        <!-- Guitar Checkbox -->
        <CheckBox
            android:id="@+id/profileGuitarCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/guitar_icon"
            android:contentDescription="@string/profileGuitarBtn"
            app:layout_constraintBottom_toBottomOf="@+id/profileVocalCheckbox"
            app:layout_constraintEnd_toStartOf="@+id/profileBassCheckbox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileVocalCheckbox"
            app:layout_constraintTop_toTopOf="@+id/profileVocalCheckbox" />

        <!-- Bass Checkbox -->
        <CheckBox
            android:id="@+id/profileBassCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/bass_icon"
            android:contentDescription="@string/profileBassBtn"
            app:layout_constraintBottom_toBottomOf="@+id/profileGuitarCheckbox"
            app:layout_constraintEnd_toStartOf="@+id/profileDrumCheckbox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileGuitarCheckbox"
            app:layout_constraintTop_toTopOf="@+id/profileGuitarCheckbox" />

        <!-- Drum Checkbox -->
        <CheckBox
            android:id="@+id/profileDrumCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/drum_icon"
            android:contentDescription="@string/profileDrumBtn"
            app:layout_constraintBottom_toBottomOf="@+id/profileBassCheckbox"
            app:layout_constraintEnd_toStartOf="@+id/profileOtherCheckbox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileBassCheckbox"
            app:layout_constraintTop_toTopOf="@+id/profileBassCheckbox" />

        <!-- Others Checkbox -->
        <CheckBox
            android:id="@+id/profileOtherCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:button="@drawable/other_icon"
            android:contentDescription="@string/profileOtherBtn"
            app:layout_constraintBottom_toBottomOf="@+id/profileDrumCheckbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileDrumCheckbox"
            app:layout_constraintTop_toTopOf="@+id/profileDrumCheckbox" />

        <!-- DIVIDER ABOUT ME-->

        <ImageView
            android:id="@+id/profileDivider1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/divider"
            android:contentDescription="@string/profileDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileBassCheckbox" />

        <!-- ABOUT ME -->

        <TextView
            android:id="@+id/profileAboutLabelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profileAboutLabelTxt"
            android:text="@string/profileAboutLabelTxt"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDivider1" />

        <!-- DESCRIPTION FIELD -->

        <EditText
            android:id="@+id/profileAboutTxt"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-light"
            android:gravity="top|start"
            android:hint="@string/profileAboutTxt"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:textColor="@android:color/white"
            android:textColorHint="@color/DisabledColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileAboutLabelTxt"/>

        <!-- DIVIDER ACCOUNTS -->

        <ImageView
            android:id="@+id/profileDivider2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/divider"
            android:contentDescription="@string/profileDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileMaxCharactersTxt" />


        <!-- LINKED ACCOUNTS -->

        <TextView
            android:id="@+id/profileLinkedAccountsLabelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profileLinkedAccountsLabelTxt"
            android:text="@string/profileLinkedAccountsLabelTxt"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileDivider2" />

        <!-- SPOTIFY LINK -->

        <ImageView
            android:id="@+id/profileSpotifyImg"
            android:layout_width="24dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profileSpotifyImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileLinkedAccountsLabelTxt"
            app:srcCompat="@drawable/ic_spotify" />

        <TextView
            android:id="@+id/profileSpotifyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/profileSpotifyTxt"
            android:fontFamily="sans-serif-light"
            android:text="@string/profileSpotifyTxt"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileSpotifyImg"
            app:layout_constraintStart_toEndOf="@+id/profileSpotifyImg"
            app:layout_constraintTop_toTopOf="@+id/profileSpotifyImg" />

        <Switch
            android:id="@+id/profileSpotifySwitch"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profileSpotifySwitch"
            app:layout_constraintBottom_toBottomOf="@+id/profileSpotifyTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profileSpotifyTxt" />

        <!-- MAX CHARACTERS LABEL -->

        <TextView
            android:id="@+id/profileMaxCharactersTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/profileMaxCharactersLabel"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileAboutTxt" />


    </android.support.constraint.ConstraintLayout>


</ScrollView>