<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:gravity="center"
    android:paddingTop="-5dp">

    <!-- Welcome -->
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:text="@string/registerHello"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="#2F80ED"
        android:textSize="35dp"
        android:textStyle="bold" />

    <!-- Almost done message -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:lines="1"
        android:text="@string/registerMessage1"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="13sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:lines="1"
        android:text="@string/registerMessage2"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="13sp" />

    <!-- Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/registerHabilities"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <!-- Abilities Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <!-- Microphone Checkbox -->
        <CheckBox
            android:id="@+id/registerVocalCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:button="@drawable/singer_icon" />

        <!-- Guitar Checkbox -->
        <CheckBox
            android:id="@+id/registerGuitarCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/guitar_icon" />

        <!-- Bass Checkbox -->
        <CheckBox
            android:id="@+id/registerBassCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/bass_icon" />

        <!-- Drum Checkbox -->
        <CheckBox
            android:id="@+id/registerDrumCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:button="@drawable/drum_icon" />

        <!-- Others Checkbox -->
        <CheckBox
            android:id="@+id/registerOtherCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:button="@drawable/other_icon" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/registerBirth"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="295dp"
        android:gravity="center"
        android:hint="@string/registerBirthPicker"
        android:textColor="@color/textColor"
        android:textColorHint="@color/DisabledColor"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/registerBirthDescription"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="12sp" />

    <Button
        android:id="@+id/registerFinishBtn"
        android:layout_width="268dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:background="@drawable/btn_ripple_finish"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>