<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/homeGridTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/gridTitle"
        android:fontFamily="sans-serif-light"
        android:text="@string/gridTitle"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeGridWannaplay" />

    <ImageView
        android:id="@+id/homeGridWannaplay"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wannaplay_typography" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/homeGridRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeGridTxt" />

    <ImageView
        android:id="@+id/homeStageImg"
        android:layout_width="219dp"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/homeStageImg"
        android:src="@drawable/stage_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/homeFilterResultTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/homeFilterResultTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/homeFilterResultTxt1"
        android:textAlignment="center"
        android:textColor="#2F80ED"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/homeFilterResultTxt2"
        app:layout_constraintEnd_toEndOf="@+id/homeStageImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/homeStageImg"
        app:layout_constraintTop_toBottomOf="@+id/homeStageImg"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/homeFilterResultTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/homeFilterResultTxt2"
        android:textAlignment="center"
        android:textColor="#2F80ED"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/homeFilterResultTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/homeFilterResultTxt"
        app:layout_constraintTop_toBottomOf="@+id/homeFilterResultTxt"
        tools:visibility="visible" />

</android.support.constraint.ConstraintLayout>